<resources>
    <string name="app_name">Blin Pancake</string>
    <string name="title_activity_tile_settings">Settings</string>
    <string name="action_settings">Settings (doesn\'t do anything)</string>
    <string name="action_canvas">Slappy Balls</string>
    <string name="action_canvas2">Slappy Balls 2</string>
    <string name="action_motion">Shaky Balls</string>
    <string name="action_gravity">Droopy Balls</string>
    <string name="action_crime">Shooty Balls</string>
    <string name="action_tiles">Tiles, I guess?</string>

    <string name="instructions_tile">WHITE TILES!</string>
    <string name="instructions_slap">Tap, uhh... tap the balls to move them.</string>
    <string name="instructions_shake">Shake the device to move the balls.</string>
    <string name="instructions_tilt">Tilt the device to move the balls.</string>
    <string name="instructions_shoot">Tap the screen to fire.</string>

    <string name="no_gravity_sensor">No gravity sensor... life is sad.</string>
    <string name="no_linear_accelerator">No linear acceleration sensor... life is sad.</string>

    <string name="button_start">Start</string>
    <string name="button_settings">Settings</string>
    <string name="button_ok">Done</string>
    <string name="label_score">Score:</string>
    <string name="label_high_scores">HIGH SCORES</string>
    <string name="label_high_score_name">NAME</string>
    <string name="label_high_score_score">SCORE</string>
    <string name="label_high_score_speed">SPEED</string>
    <string name="label_high_score_date">DATE</string>

    <!--  preference category titles -->
    <string name="pref_untimed">Normal</string>
    <string name="pref_timed">Timed</string>

    <string name="pref_speedType">Acceleration Type</string>
    <string-array name="pref_speedType_titles">
        <item>Increasing</item>
        <item>Oscillating</item>
        <item>Boomerang</item>
        <item>None</item>
    </string-array>
    <string-array name="pref_speedType_values">
        <item>increasing</item>
        <item>oscillating</item>
        <item>boomerang</item>
        <item>constant</item>
    </string-array>
    <string name="pref_speedType_default">increasing</string>

    <string name="pref_playerControlSpeed">Player controls speed</string>
    <string name="pref_playerControlSpeed_default">false</string>

    <string name="pref_timeTiles">Time Tiles!!</string>

    <string name="pref_timeAllowed">Time Options</string>
    <string-array name="pref_timeAllowed_titles">
        <item>20 Seconds</item>
        <item>1 Minute</item>
        <item>2 Minutes</item>
        <item>3 Minutes</item>
        <item>5 Minutes</item>
    </string-array>
    <string-array name="pref_timeAllowed_values">
        <item>20</item>
        <item>60</item>
        <item>120</item>
        <item>180</item>
        <item>300</item>
    </string-array>
    <string name="pref_timeAllowed_default">20</string>

</resources>
