<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.scottrealapps.calculater.MainActivity">
    <item
        android:id="@+id/action_canvas"
        android:orderInCategory="100"
        android:title="@string/action_canvas"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_canvas2"
        android:orderInCategory="100"
        android:title="@string/action_canvas2"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_motion"
        android:orderInCategory="100"
        android:title="@string/action_motion"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
</menu>
